[gd_scene load_steps=4 format=3 uid="uid://7cq6c1wkh8us"]

[ext_resource type="Script" uid="uid://toijlyg05yib" path="res://scripts/palanca.gd" id="1_50jl3"]
[ext_resource type="Texture2D" uid="uid://cbsd685ldy1kd" path="res://assets/sprites/pirate bomb pack/7-Objects/4-Interrogation Dialog/1-Opening/3.png" id="1_d8vtg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50jl3"]

[node name="Palanca" type="Area2D"]
script = ExtResource("1_50jl3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_50jl3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_d8vtg")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
